<resources>
    <string name="app_name">Numbers Calculation Game</string>
    <string name="numbers_ncalculation_game">Numbers\nCalculation Game</string>
    <string name="_0">0</string>
    <string name="score">Score</string>
    <string name="question">Question</string>
    <string name="start_game">START GAME</string>
    <string name="write_here">write here</string>
    <string name="your_score">Your Score</string>
    <string name="close">close</string>
    <string name="try_again">try again</string>
</resources>