<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_text_heavy"
            android:gravity="center"
            android:text="@string/numbers_ncalculation_game"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  center Layout  -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader">

            <!--    Score Card    -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D9D9D9"
                android:visibility="gone"
                app:cardCornerRadius="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutDescription="@xml/activity_main_xml_constraintlayout_scene">

                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_text_heavy"
                        android:text="@string/_0"
                        android:gravity="center"
                        android:textColor="@color/purple"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/viewScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-15dp"
                        android:fontFamily="@font/sf_pro_text_heavy"
                        android:text="@string/score"
                        android:textColor="@color/purple"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvScore" />

                    <FrameLayout
                        android:id="@+id/progressTime"
                        android:layout_width="match_parent"
                        android:layout_height="12dp"
                        android:backgroundTint="@color/green"
                        android:background="@drawable/round"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewScore" />

                </androidx.constraintlayout.motion.widget.MotionLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="#D9D9D9"
                app:cardCornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/cardScore">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/viewQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:text="@string/question"
                        android:textColor="@color/purple"
                        android:textSize="21sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvQuestionNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:textColor="@color/purple"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/etAnswer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewQuestion"
                        tools:text="23 + 66 = " />

                    <EditText
                        android:id="@+id/etAnswer"
                        android:layout_width="110dp"
                        android:layout_height="65dp"
                        android:background="@drawable/et_design"
                        android:fontFamily="@font/sf_pro_text_bold"
                        android:gravity="center"
                        android:hint="@string/write_here"
                        android:inputType="number"
                        android:paddingHorizontal="5dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/purple"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/tvQuestionNumber"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvQuestionNumber"
                        app:layout_constraintTop_toTopOf="@id/tvQuestionNumber" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartOrNext"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@id/cardQuestion"
                android:layout_marginTop="26dp"
                android:text="@string/start_game"
                android:fontFamily="@font/sf_pro_text_bold"
                android:textSize="19sp"
                android:backgroundTint="@color/blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>







